// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-radio Default 1`] = `
<p>
  <span
    class="radio"
    style="align-items: center;"
  >
    <input
      class="radio__control"
      id="radio-1"
      type="radio"
      value="123"
    />
    <span
      class="radio__icon"
      hidden=""
    >
      <svg
        aria-hidden="true"
        class="radio__checked icon icon--radio-checked"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-radio-checked"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="radio__unchecked icon icon--radio-unchecked"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-radio-unchecked"
        />
      </svg>
    </span>
  </span>
  <label
    class="field__label field__label--end"
    for="radio-1"
  >
    Default
  </label>
</p>
`;

exports[`Storyshots ebay-radio Disabled radio-button 1`] = `
<span
  class="radio"
  style="align-items: center;"
>
  <input
    class="radio__control"
    disabled=""
    id="radio-20"
    type="radio"
  />
  <span
    class="radio__icon"
    hidden=""
  >
    <svg
      aria-hidden="true"
      class="radio__checked icon icon--radio-checked"
      focusable="false"
      height="24px"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-radio-checked"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="radio__unchecked icon icon--radio-unchecked"
      focusable="false"
      height="24px"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-radio-unchecked"
      />
    </svg>
  </span>
</span>
`;

exports[`Storyshots ebay-radio Grouped radio-buttons 1`] = `
<fieldset>
  <legend>
    Choose an Option
  </legend>
  <span
    class="field"
  >
    <span
      class="radio"
      style="align-items: center;"
    >
      <input
        checked=""
        class="radio__control"
        id="group-radio-1"
        name="radio-group"
        type="radio"
        value="1"
      />
      <span
        class="radio__icon"
        hidden=""
      >
        <svg
          aria-hidden="true"
          class="radio__checked icon icon--radio-checked"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-radio-checked"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="radio__unchecked icon icon--radio-unchecked"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-radio-unchecked"
          />
        </svg>
      </span>
    </span>
    <label
      class="field__label field__label--end"
      for="group-radio-1"
    >
      Option 1
    </label>
  </span>
  <span
    class="field"
  >
    <span
      class="radio"
      style="align-items: center;"
    >
      <input
        class="radio__control"
        id="group-radio-2"
        name="radio-group"
        type="radio"
        value="2"
      />
      <span
        class="radio__icon"
        hidden=""
      >
        <svg
          aria-hidden="true"
          class="radio__checked icon icon--radio-checked"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-radio-checked"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="radio__unchecked icon icon--radio-unchecked"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-radio-unchecked"
          />
        </svg>
      </span>
    </span>
    <label
      class="field__label field__label--end"
      for="group-radio-2"
    >
      Option 2
    </label>
  </span>
  <span
    class="field"
  >
    <span
      class="radio"
      style="align-items: center;"
    >
      <input
        class="radio__control"
        id="group-radio-3"
        name="radio-group"
        type="radio"
        value="3"
      />
      <span
        class="radio__icon"
        hidden=""
      >
        <svg
          aria-hidden="true"
          class="radio__checked icon icon--radio-checked"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-radio-checked"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="radio__unchecked icon icon--radio-unchecked"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-radio-unchecked"
          />
        </svg>
      </span>
    </span>
    <label
      class="field__label field__label--end"
      for="group-radio-3"
    >
      Option 3
    </label>
  </span>
</fieldset>
`;

exports[`Storyshots ebay-radio Selected radio-button 1`] = `
<span
  class="radio"
  style="align-items: center;"
>
  <input
    checked=""
    class="radio__control"
    id="radio-2"
    type="radio"
  />
  <span
    class="radio__icon"
    hidden=""
  >
    <svg
      aria-hidden="true"
      class="radio__checked icon icon--radio-checked"
      focusable="false"
      height="24px"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-radio-checked"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="radio__unchecked icon icon--radio-unchecked"
      focusable="false"
      height="24px"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-radio-unchecked"
      />
    </svg>
  </span>
</span>
`;

exports[`Storyshots ebay-radio Styled radio-button 1`] = `
<style>
  
            .custom ~ label,
            .custom .radio__icon svg { color: green !important }
            
</style>
`;

exports[`Storyshots ebay-radio Using custom label html 1`] = `
<p>
  <span
    class="radio"
    style="align-items: center;"
  >
    <input
      class="radio__control"
      id="radio-1"
      type="radio"
      value="123"
    />
    <span
      class="radio__icon"
      hidden=""
    >
      <svg
        aria-hidden="true"
        class="radio__checked icon icon--radio-checked"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-radio-checked"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="radio__unchecked icon icon--radio-unchecked"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-radio-unchecked"
        />
      </svg>
    </span>
  </span>
  <label
    class="field__label field__label--end"
    for="radio-1"
  >
    Default
  </label>
</p>
`;
